# python-crud

./: .gitignore  README.md
BACK_END/: .env  .env.exemple  .~lock.cadastroprojeto.xlsx#  app.py  cadastroprojeto.xlsx  cadastroprojeto10.xlsx  pyproject.toml
FRONT_END/: index.html  package-lock.json  package.json  tailwind.config.js
FRONT_END/src/: App.jsx  index.css  output.css
FRONT_END/src/components/: Button.jsx  Input.jsx  Label.jsx
